# MMleadv4

./: .replit  auth.py  crud.py  database.py  init_db.py  main.py  maytapi.py  models.py  pyproject.toml  replit.md  schemas.py
attached_assets/: Pasted-Desenvolva-um-sistema-web-completo-com-design-moderno-responsivo-e-intuitivo-focado-em-gest-o-de--1758128020049_1758128020051.txt
static/css/: style.css
static/js/: app.js
templates/: base.html  brokers.html  dashboard.html  leads.html  login.html  reports.html  settings.html  whatsapp.html  whatsapp_chat.html
